added js for menupop and seach filter

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:hidden" fill="none" viewBox="0 0 24 24"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" class="w-6 md:hidden" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
@@ -28,6 +28,27 @@
             </li>
         </ul>
     </nav>
+
+
+     <!-- side navbar -->
+     <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%; height:100vh; right:-50% ">
+        <div id="closenav" class="text-right p-5">
+            <p class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 items-center text-grey-600 ">
+            <li>
+                <a class="hover:underline hover:text-black" href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="Product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+     </section>
+
+
     <!-- contact form -->
     <section class="bg-white dark:bg-gray-900 ">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md bg-green-200">
@@ -57,6 +78,10 @@
         <p>Lets make the EARTH green for ever!.....🌍🌱</p>
         <p>@ 2024 Greenday.com</p>
     </section>
+
+
+<!-- src js-->
+<script src="./contact.js"></script>
 
 </body>
 </html>
