--- a/Product.html
+++ b/Product.html
@@ -11,7 +11,7 @@
       <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:hidden" fill="none" viewBox="0 0 24 24"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" class="w-6 md:hidden" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
@@ -29,11 +29,29 @@
         </ul>
     </nav>
 
+     <!-- side navbar -->
+     <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%; height:100vh; right:-50% ">
+        <div id="closenav" class="text-right p-5">
+            <p class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 items-center text-grey-600 ">
+            <li>
+                <a class="hover:underline hover:text-black" href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="Product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+     </section>
+
     <!-- Our Products -->
     <section class="p-4 text-center">
         <h1 class="text-3xl mt-5 font-bold ">Our Products</h1>
-        <input type="text" name="" id="" placeholder="Seacrh for product" class="border border-black p-3 mt-5 rounded-3xl" style="width: 70%;">
-        <div class="grid grid-cols-2 md:grid-cols-4 mt-10 gap-5">
+        <input id="Search" type="text" name="" id="" placeholder="Seacrh for product" class="border border-black p-3 mt-5 rounded-3xl" style="width: 70%;">
+        <div id="productcontainer" class="grid grid-cols-2 md:grid-cols-4 mt-10 gap-5">
             <div>
                 <img src="./pot/pot1.jpg" class="rounded-2xl inline hover:shadow-xl transform hover:-translate-y-2" alt="">
                 <h1>Green Plant</h1>
@@ -83,6 +101,9 @@
         <p>Lets make the EARTH green for ever!.....🌍🌱</p>
         <p>@ 2024 Greenday.com</p>
     </section>
+
+    <!-- src js-->
+    <script src="./product.js"></script>
 
 </body>
 </html>
